--- a/styles/media-query.css
+++ b/styles/media-query.css
@@ -31,13 +31,13 @@ Faca uma pesquiza para achar valores atualizados
     /*  Abaixo para  mudar a posicao da imagem quando aumentar a tela d tamanho do tablet */
     section#login > div#imagem {
 
-        float: left;
+        float: left; /* Imagem a esquerda  */
         width: 30%;
         height: 100%;
     }
 
     section#login > div#formulario {
-        float: right;
+        float: right; /* Formulario a direita */
         width: 70%;
     }
 }
@@ -58,13 +58,26 @@ Faca uma pesquiza para achar valores atualizados
 
     section#login > div#imagem {
 
-        float: left;
+        float: right; /* Imagem flutua a direita */
         width: 50%;
         height: 100%;
    
      }
 
      section#login > div#formulario {
-        float: right;
+        float: left; /* Formulario flutua a  esquerda */
         width: 50%;
+    }
+
+    div#formulario > h1 {
+
+        text-align: center;
+        margin-bottom: 10px;
+        font-size: 2em;
+
+    }
+
+    div#formulario > p {
+
+        font-size: 1.2em;
     }
