--- a/styles/style.css
+++ b/styles/style.css
@@ -38,7 +38,6 @@ section#login {
       position: absolute;
       top: 50%;
       left: 50%;
-      transform: translate(-50%, -50%);
       overflow: hidden;  /*  Tudo que tiver fora da borda vai ficar escondido  */
 
       background-color: white;
@@ -47,6 +46,7 @@ section#login {
       border-radius: 20px;
       box-shadow: 0px 0px 10px black;
 
+      transform: translate(-50%, -50%);
       transition: width 1s, height 1s; /* Uma animacao quando vc aumenta e diminui a tela parece que ela se mexe sozinha  */
       transition-timing-function: ease; /* Para da uma suavizada durante a animacao acima criada   */
 }
@@ -84,10 +84,11 @@ div#formulario > h1 {
   form > div.campo {
 
        background-color: #a56dcb;
+       border: 2px solid #a56dcb;
        width: 100%;
        display: block;
        height: 40px;
-       border-radius: 5px;
+       border-radius: 8px;
        margin: 5px 0px;  /*  a de cima e em baixo com 5 e a da direita e esquerda com zero*/
 
   }
@@ -97,6 +98,35 @@ div#formulario > h1 {
 
          display:none;  /* Tira o nome Login e senha  */
          
+  }
+
+  div.campo > i {
+
+      color: rgb(255, 255, 255);
+      background-color: black;
+      font-size: 2em;
+      width: 40px;
+      padding: 5px;
+     
+  }
+
+  div.campo > input {
+
+      background-color: rgb(157, 224, 157);
+      font-size: 1em;
+      width: calc(100% - 55px);
+      height: 100%;
+      border: 0px;
+      border-radius: 8px;
+      padding: 4px;
+      transform: translateY (-12px);  /* Levantar o input para cima  */
+
+  }
+
+  div.campo > input:focus-within {  /* Para ganhar foco quando tiver digitando  */
+
+      background-color: white;
+
   }
 
 form > input[type=submit] { /* Formatacao do botao criado na class  */
